--- a/jatu.html
+++ b/jatu.html
@@ -1,90 +1,19 @@
 <html>
-<head>
-<meta charset="utf-8">
-<title>จตุรมิตร31</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="utf-8">
+    <title>จตุรมิตร</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://gstatic.com" crossorigin>
 
-<style>
-body{
-font-family: "Conburi", sans-serif;
-font-weight: 300;
-font-style: normal;
-cursor: url("jatu.png"), auto;
-height: 100vh;
-}
-mark{
-background: linear-gradient(hotpink, skyblue, #FFE4E1, beige,red,purple);
-color: black;
-}
-button1{
-background: linear-gradient(lightpink, skyblue);
-color: blue;
-}
-button2{
-background: linear-gradient(lightgreen, yellow);
-color: blue;
-}
-button3{
-background: linear-gradient(red, white);
-color: blue;
-}
-button4{
-background: linear-gradient(violet, gold);
-color: blue;
-}
-header{
-background: linear-gradient(#98FB98, lightpink,red,purple, lightskyblue);
-padding: 30px;
-text-align: center;
-border-radius: 10px;
-}
-</style>
-
-</head>
-<body background="https://s.isanook.com/ca/0/ud/279/1398049/75327076_794532760977086_7700.jpg?ip/resize/w850/q80/jpg">
-<header>
-<h1><marquee><mark>
-ยินดีต้อนรับสู่เว็บไซต์ จตุรมิตร 4 เหล่า
-โรงเรียนสวนกุหลาบวิทยาลัย🌹 โรงเรียนเทพศิรินทร์🔰 โรงเรียนอัสสัมชัญ🚀 โรงเรียนกรุงเทพคริสเตียนวิทยาลัย🔥
-</marquee></mark></h1>
-<br>
-
-<h2><button1 onclick="document.location='http://www.sk.ac.th/'">โรงเรียนสวนกุหลาบวิทยาลัย🌹</button1>
-&nbsp;&nbsp;&nbsp;
-<button2 onclick="document.location='https://www.debsirin.ac.th/'">โรงเรียนเทพศิรินทร์🔰</button2>
-&nbsp;&nbsp;&nbsp;
-<button3 onclick="document.location='https://www.assumption.ac.th/'">โรงเรียนอัสสัมชัญ🚀</button3>
-&nbsp;&nbsp;&nbsp;
-<button4 onclick="document.location='https://www.bcc.ac.th/2019/'">โรงเรียนกรุงเทพคริสเตียนวิทยาลัย🔥</button4>
-</header></h2>
-<br><br>
-
-<div id="menu" style="background: radial-gradient(hotpink, skyblue, limegreen, yellow,purple,red,gold); height: 400px; width:200px; float: left;">
-<b>🔎สารบัญ</b><br>
-💗 บทนำ <br><br>
-💗 ประวัติ <br><br>
-💗 การแข่งขัน <br><br>
-💗 อันดับแชมป์ <br><br>
-💗 จตุรมิตรสามัคคีอาวุโส <br><br>
-😎 ผู้จัดทำ
-</div>
-
-<center>
-<img src="Pi7_GIF_CMP.gif" width="650" height="400"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <!-- 700 400 -->
-<!-- 340 500 --> <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSK.Jaturamitr.Official%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-</center>
-
-<br><br>
-
-<center>
-<iframe width="400" height="250" src="https://www.youtube.com/embed/HL4orqoUN48?si=mA3_6opRVQzyGCbW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<iframe width="400" height="250" src="https://www.youtube.com/embed/DAUU1ilHUrs?si=esd1Fy_gVTA4CzoE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<iframe width="400" height="250" src="https://www.youtube.com/embed/U3h2q-eC7KA?si=pGP2gPpvR04Z15tz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<iframe width="400" height="250" src="https://www.youtube.com/embed/WNiYCr_kr9E?si=mINHjqr7CQfSUWi_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<iframe width="400" height="250" src="https://www.youtube.com/embed/-SlhNCs0yaA?si=qsqndYEM3jfqlO7V" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</center>
-
-</body>
+    <style>
+    body{
+      font-family: "Chonburi", sans-serif;
+      font-weight: 300;
+      font-style: normal;
+      cursor: url(jatu.png), auto;
+      height: 100vh;
+    }
+    </style>
+    
+  </head>
 </html>
