--- a/jatu.html
+++ b/jatu.html
@@ -13,7 +13,29 @@
       cursor: url(jatu.png), auto;
       height: 100vh;
     }
+    mark{
+    background: linear-gradient(lightpink, skyblue, beige, red, purple);
+    color: black;
+    }
+    button1{
+    background: linear-gradient(lightpink, skyblue);
+    color: black;
+    }
+    button2{
+    background: linear-gradient(lightgreen, yellow);
+    color: black;
+    }
+    button3{
+    background: linear-gradient(lightpink, white);
+    color: black;
+    }
+    button4{
+    background: linear-gradient(purple, golden);
+    color: black;
+    }
     </style>
+  
     
   </head>
+  <body background=""
 </html>
