--- a/jatu.html
+++ b/jatu.html
@@ -37,5 +37,5 @@
   
     
   </head>
-  <body background=""
+  <body background="https://static.amarintv.com/media/PJVlR0ljpOCeOq4srDjskMd8EXp3TcmDBGDZB5yIiGWetPSx8VbCHo67tsinXjtADb.png"
 </html>
