--- a/jatu.html
+++ b/jatu.html
@@ -37,5 +37,11 @@
   
     
   </head>
-  <body background="https://static.amarintv.com/media/PJVlR0ljpOCeOq4srDjskMd8EXp3TcmDBGDZB5yIiGWetPSx8VbCHo67tsinXjtADb.png"
+  <body background="https://static.amarintv.com/media/PJVlR0ljpOCeOq4srDjskMd8EXp3TcmDBGDZB5yIiGWetPSx8VbCHo67tsinXjtADb.png">
+  <header>
+  <h1><marquee><mark>
+    ยินดีต้อนรับเข้าสู่เว็บไชต์จตุรมิตร 4 เหล่า
+    โรงเรียนสวนกุหลาบวิทยาลัย🤖 โรงเรียนเทพสิรินทร์😜 โรงเรียนอสัมชัญ👻 โรงเรียนกรุงเทพคริสเตียนวิทยาลัย😍
+  </mark></marquee></h1>
+  </header>
 </html>
