--- a/jatu.html
+++ b/jatu.html
@@ -43,5 +43,7 @@
     ยินดีต้อนรับเข้าสู่เว็บไชต์จตุรมิตร 4 เหล่า
     โรงเรียนสวนกุหลาบวิทยาลัย🤖 โรงเรียนเทพสิรินทร์😜 โรงเรียนอสัมชัญ👻 โรงเรียนกรุงเทพคริสเตียนวิทยาลัย😍
   </mark></marquee></h1>
+  <br>
+    <h2><botton1 onclick="document.location=http</h2>
   </header>
 </html>
