--- a/table.html
+++ b/table.html
@@ -83,7 +83,7 @@ height: 400px; width: 200px; float:left;">
 ❤️ ประเพณีชาวจตุรมิตร <br><br>
 😊 ผู้จัดทำ
 </div>
-<sectioon>
+<section>
        <center>
               <h1><mark>ผลการแข่งขันจตุรมิตรสามัคคี</mark></h1>
        </center>
