--- a/intro.html
+++ b/intro.html
@@ -1,67 +1,88 @@
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>บทนำ</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+<head>
+<meta charset="utf-8">
+<title>ผลการแข่งขัน</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-      body{font-family: "Chonburi", cursive;
-  font-weight: 400;
-  font-style: normal;
-      cursor:url("jatu.png"),auto;height:100vh;}
+<link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+<style>
+body{font-family: "Chonburi", cursive;
+font-weight: 400;
+font-style: normal;
+cursor:url("jatu.png") 16 16,auto;
+height: 100vh;
+margin: 0;
+}
+mark{background:linear-gradient(hotpink,skyblue);
+color:black;}
+button1{background:linear-gradient(hotpink,skyblue);
+color:black;}
+button2{background:linear-gradient(limegreen,yellow);
+color:black;}
+button3{background:linear-gradient(MediumPurple,yellow);
+color:black;}
+button4{background:linear-gradient(red,white);
+color:black;}
+header{background:linear-gradient(red,Orange,Yellow,green,blue,skyblue,MediumPurple);
+padding: 30px;
+text-align:center;
+border-radius: 10px;}
+section{background:linear-gradient(limegreen,yellow,white);
+padding:15px;
+margin:20px auto;
+width:70%;
+border-radius:10px;}
+p{text-indent: 2em;}
+.zoom:hover{transform:scale(1.5);cursor:pointer;}
+
+img:hover{animation: glowcolors 1.2s infinite alternate;}
+@keyframes glowcolors{
+0% {box-shadow: 0 0 20px hot pink;}
+25% {box-shadow: 0 0 20px skyblue;}
+50% {box-shadow: 0 0 20px gold;}
+75% {box-shadow: 0 0 20px violet;}
+100% {box-shadow: 0 0 20px red;}
+}
+
+.blink-bg{
+animation:blinkbg 1s infinite alternate;
+padding: 3px 6px;
+}
+@keyframes blinkbg{
+0% {background: yellow;}
+100%{background: orange;}
+
+}
 </style>
-    <style>
-      mark{background:linear-gradient(skyblue,hotpink,aquamarine,maroon);color:black;}
-      button1{background:linear-gradient(hotpink,skyblue);color:pink;}
-      button2{background:linear-gradient(green,yellow);color:green;}
-      button3{background:linear-gradient(red,white);color:red;}
-      button4{background:linear-gradient(purple,gold);color:purple;}
-      header{background:linear-gradient(hotpink,skyblue);
-            padding: 30px;
-            text-align:center;
-            border-radius: 10px;}
-      section{background: linear-gradiant(Hot-Pink,LightSkyBlue,white,red,green,yellow,purple,gold)
-        padding: 15px;
-        margin: 20px auto;
-        width: 70%;
-        border-radius: 10px;}
-      p{text-indent: 2em;}
+</head>
 
-      .zoom:hover
-    </style>
-  </head>
-  <body background="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rpMb7k7mb7GB9w6C72bbbeOXDirSSKwCoyYmwDN8w3Q1WVJrMT.jpg">
-    <header>
-  <h1><marquee><mark>
-    ยินดีต้อนรับสู่เว็บไซต์ 4 เหล่า
-    โรงเรียนสวนกุหลาบวิทยาลัย🥖 โรงเรียนเทพศิรินทร์🔰 โรงเรียนอัสสัมชัญ⭕ โรงเรียนกรุงเทพคริสเตียนวิทยาลัย💨
-  </marquee></mark></h1>
-  <br>
-      <h2>
-    <button1 onclick="document.location='http://www.sk.ac.th/'">โรงเรียนสวนกุหลาบวิทยาลัย🥖</button1>
-        &nbsp;&nbsp;&nbsp;
-    <button2 onclick="document.location='https://www.debsirin.ac.th/'">โรงเรียนเทพศิรินทร์🔰</button2>
-        &nbsp;&nbsp;&nbsp;
-    <button3 onclick="document.location='https://www.assumption.ac.th/'">โรงเรียนอัสสัมชัญ⭕</button3>
-        &nbsp;&nbsp;&nbsp;
-    <button4 onclick="document.location='https://www.bcc.ac.th/2019/'">โรงเรียนกรุงเทพคริสเตียนวิทยาลัย💨</button4>
-      </header></h2>
-
-    
-    <br><br>
-    <div id="menu"
-      style="background:radial-gradient(hotpink,skyblue,gold,yellow,darkviolet,white,red);
-      height:400px; width:200px; float:left;">
-    <b>💢สารบัญ</b><br>
-    ❤บทนำ<br><br>
-    ❤ประวัติ<br><br>
-    ❤การแข่งขัน<br><br>
-    ❤อันดับแชมป์<br><br>
-    ❤จตุรมิตรสามัคคีอาวุโส<br><br>
-    ❤ประเภณีชาวจตุรมิตร<br><br>
-    💝ผู้จัดทำ <br>
-    </div>
+<body background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXfDZC8N3Dw_Csl7OItTXwBzb4SDvWmf8I9g&s">
+<header>
+<h1><marquee><mark>ยินดีต้อนรับสู่เว็บไซต์ จตุรมิตร 4 เหล่า
+โรงเรียนสวนกุหลาบวิทยาลัย🎀💙 โรงเรียนเทพศิรินทร์💚💛 โรงเรียนกรุงเทพคริสเตียน💜💛 โรงเรียนอัสสัมชัญ💝🤍</marquee></mark></h1>
+<br>
+<h2><button1 onclick="document.location='http://www.sk.ac.th/'">โรงเรียนสวนกุหลาบวิทยาลัย🎀💙</button>
+&nbsp;&nbsp;&nbsp;
+<button2 onclick="document.location='https://www.debsirin.ac.th/'">โรงเรียนเทพศิรินทร์💚💛</button>
+&nbsp;&nbsp;&nbsp;
+<button3 onclick="document.location='https://www.bcc.ac.th/2019/'">โรงเรียนกรุงเทพคริสเตียน💜💛</button>
+&nbsp;&nbsp;&nbsp;
+<button4 onclick="document.location='https://www.assumption.ac.th/'">โรงเรียนอัสสัมชัญ💝🤍</button>
+</button4>
+<br><br>
+</h2></header>
+<div id="menu"
+style="background:radial-gradient(pink,magenta,purple,blue);
+height: 400px; width: 200px; float:left;">
+<b>🔎สารบัญ⚽</b><br><br>
+❤️ บทนำ <br><br>
+❤️ ประวัติ <br><br>
+❤️ การแข่งขัน <br><br>
+❤️ อันดับแชมป์ <br><br>
+❤️ จตุรมิตรสามัคคีอาวุโส <br><br>
+❤️ ประเพณีชาวจตุรมิตร <br><br>
+😊 ผู้จัดทำ
+</div>
 
     <section>
       <center>
