--- a/jatu.html
+++ b/jatu.html
@@ -1,49 +1,99 @@
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>จตุรมิตร</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://gstatic.com" crossorigin>
+<head>
+<meta charset="utf-8">
+<title>ประวัติ</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+<style>
+body{font-family: "Chonburi", cursive;
+font-weight: 400;
+font-style: normal;
+cursor:url("jatu.png") 16 16,auto;
+height: 100vh;
+margin: 0;
+}
+mark{background:linear-gradient(hotpink,skyblue);
+color:black;}
+button1{background:linear-gradient(hotpink,skyblue);
+color:black;}
+button2{background:linear-gradient(limegreen,yellow);
+color:black;}
+button3{background:linear-gradient(MediumPurple,yellow);
+color:black;}
+button4{background:linear-gradient(red,white);
+color:black;}
+header{background:linear-gradient(red,Orange,Yellow,green,blue,skyblue,MediumPurple);
+padding: 30px;
+text-align:center;
+border-radius: 10px;}
+section{background:linear-gradient(limegreen,yellow,white);
+padding:15px;
+margin:20px auto;
+width:70%;
+border-radius:10px;}
+p{text-indent: 2em;}
+.zoom:hover{transform:scale(1.5);cursor:pointer;}
 
-    <style>
-    body{
-      font-family: "Chonburi", sans-serif;
-      font-weight: 300;
-      font-style: normal;
-      cursor: url(jatu.png), auto;
-      height: 100vh;
-    }
-    mark{
-    background: linear-gradient(lightpink, skyblue, beige, red, purple);
-    color: black;
-    }
-    button1{
-    background: linear-gradient(lightpink, skyblue);
-    color: black;
-    }
-    button2{
-    background: linear-gradient(lightgreen, yellow);
-    color: black;
-    }
-    button3{
-    background: linear-gradient(lightpink, white);
-    color: black;
-    }
-    button4{
-    background: linear-gradient(purple, golden);
-    color: black;
-    }
-    </style>
-  
-    
-  </head>
-  <body background="https://static.amarintv.com/media/PJVlR0ljpOCeOq4srDjskMd8EXp3TcmDBGDZB5yIiGWetPSx8VbCHo67tsinXjtADb.png">
-  <header>
-  <h1><marquee><mark>
-    ยินดีต้อนรับเข้าสู่เว็บไชต์จตุรมิตร 4 เหล่า
-    โรงเรียนสวนกุหลาบวิทยาลัย🤖 โรงเรียนเทพสิรินทร์😜 โรงเรียนอสัมชัญ👻 โรงเรียนกรุงเทพคริสเตียนวิทยาลัย😍
-  </mark></marquee></h1>
-  <br>
-    <h2><botton1 onclick="document.location=http</h2>
-  </header>
+img:hover{animation: glowcolors 1.2s infinite alternate;}
+@keyframes glowcolors{
+0% {box-shadow: 0 0 20px hot pink;}
+25% {box-shadow: 0 0 20px skyblue;}
+50% {box-shadow: 0 0 20px gold;}
+75% {box-shadow: 0 0 20px violet;}
+100% {box-shadow: 0 0 20px red;}
+}
+
+.blink-bg{
+animation:blinkbg 1s infinite alternate;
+padding: 3px 6px;
+}
+@keyframes blinkbg{
+0% {background: yellow;}
+100%{background: orange;}
+
+}
+</style>
+</head>
+
+<body background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXfDZC8N3Dw_Csl7OItTXwBzb4SDvWmf8I9g&s">
+<header>
+<h1><marquee><mark>ยินดีต้อนรับสู่เว็บไซต์ จตุรมิตร 4 เหล่า
+โรงเรียนสวนกุหลาบวิทยาลัย🎀💙 โรงเรียนเทพศิรินทร์💚💛 โรงเรียนกรุงเทพคริสเตียน💜💛 โรงเรียนอัสสัมชัญ💝🤍</marquee></mark></h1>
+<br>
+<h2><button1 onclick="document.location='http://www.sk.ac.th/'">โรงเรียนสวนกุหลาบวิทยาลัย🎀💙</button>
+&nbsp;&nbsp;&nbsp;
+<button2 onclick="document.location='https://www.debsirin.ac.th/'">โรงเรียนเทพศิรินทร์💚💛</button>
+&nbsp;&nbsp;&nbsp;
+<button3 onclick="document.location='https://www.bcc.ac.th/2019/'">โรงเรียนกรุงเทพคริสเตียน💜💛</button>
+&nbsp;&nbsp;&nbsp;
+<button4 onclick="document.location='https://www.assumption.ac.th/'">โรงเรียนอัสสัมชัญ💝🤍</button>
+</button4>
+<br><br>
+</h2></header>
+<div id="menu"
+style="background:radial-gradient(pink,magenta,purple,blue);
+height: 400px; width: 200px; float:left;">
+<b>🔎สารบัญ⚽</b><br><br>
+❤️ บทนำ <br><br>
+❤️ ประวัติ <br><br>
+❤️ การแข่งขัน <br><br>
+❤️ อันดับแชมป์ <br><br>
+❤️ จตุรมิตรสามัคคีอาวุโส <br><br>
+❤️ ประเพณีชาวจตุรมิตร <br><br>
+😊 ผู้จัดทำ
+</div>
+<center>
+<img src="Pi7_GIF_CMP.gif" width="700" height="400">
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSK.Jaturamitr.Official%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="700" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+</center>
+
+<br><br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TBkaIo-8dq4?si=EXLJHNg8KSyOyCnK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/yVlTBvD5J3Y?si=-VjvWR9xW9gs5rQq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/6Zm6_zL60oo?si=IogoAYcVWJbVRAxT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/g3bPQApZlAM?si=aXNAe7F6OdbDFZTx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/qNCLZjwKZlM?si=RckWm-GT_Y0_NGTp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</body>
 </html>
