--- a/table.html
+++ b/table.html
@@ -75,13 +75,14 @@ padding: 3px 6px;
 style="background:radial-gradient(pink,magenta,purple,blue);
 height: 400px; width: 200px; float:left;">
 <b>🔎สารบัญ⚽</b><br><br>
-❤️ บทนำ <br><br>
-❤️ ประวัติ <br><br>
-❤️ การแข่งขัน <br><br>
+<a href="https://nattaphat60228.github.io/sky.github.io/jatu">❤️ หน้าแรก </a><br><br>
+<a href="https://nattaphat60228.github.io/sky.github.io/intro">❤️ บทนำ </a><br><br>
+<a href="https://nattaphat60228.github.io/sky.github.io/history">❤️ ประวัติ </a><br><br>
+<a href="https://nattaphat60228.github.io/sky.github.io/table">❤️ การแข่งขัน </a><br><br>
 ❤️ อันดับแชมป์ <br><br>
 ❤️ จตุรมิตรสามัคคีอาวุโส <br><br>
 ❤️ ประเพณีชาวจตุรมิตร <br><br>
-😊 ผู้จัดทำ
+😊 ด.ช.ณัฐพัชร์ พาชีรัตน์ ม.203 เลขที่ 6
 </div>
 <section>
        <center>
