--- a/daddy.html
+++ b/daddy.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>วันแม่แห่งชาติ</title>
+<title>วันพ่อแห่งชาติ</title>
 <style>
 mark{background-color:purple;
 color:#FFD6EE;}
@@ -16,19 +16,19 @@ p{text-indent:2em;}
 <body background="https://png.pngtree.com/thumb_back/fh260/background/20201226/pngtree-blue-gradient-thai-mothers-day-background-image_516197.jpg">
 <div class="content">
 <center>
-         <h1><mark>วันแม่แห่งชาติ🏴‍☠️</mark></h1>
-         <h1><mark><marquee>ผมรักแม่ที่สุดในโลก☢</marquee></mark></h1>
+         <h1><mark>วันพ่อแห่งชาติ🏴‍☠️</mark></h1>
+         <h1><mark><marquee>ผมรักพ่อที่สุดในโลก☢</marquee></mark></h1>
 <br><br>
 <video width = "500" height ="400" controls = "controls">
 <source src="mo.mp4">
 </video>
 <br><br>
-<h1><mark>สิ่งที่อยากจะบอกแม่</mark></h1>
+<h1><mark>สิ่งที่อยากจะบอกพ่อ</mark></h1>
 <img src="IMG_2358.jpg" width=200 height=250
 style="border:10px dotted blue;">
 </center>
 <br><br>
-<p>Mom ,I love u so much.I will be a doctor and be a good person.
+<p>Dad ,I love u so much.I will be a doctor and be a good person.
 </p>
 <center>
 <img src="IMG_2359.jpg" width=250 height=200
@@ -41,12 +41,12 @@ style="border:10px double purple;">
 <img src="IMG_2360.jpg" width=200 height=250
 style="border:10px dotted blue;">
 <br><br>
-<h1><mark>บทกลอนมอบให้แม่</mark></h1>
-ใจดวงนี้ลูกมีรักให้กับแม่<br>
-จะช่วยเหลือและดูแลไม่ห่างหาย<br>
-ลูกจะทำให้คุณแม่สุขสบาย<br>
-หนทางไกลจะฝ่าฟันเพื่อแม่เอย<br>
-<h1><mark>บทเพลงมอบให้แม่</mark></h1>
+<h1><mark>บทกลอนมอบให้พ่อ</mark></h1>
+พ่อดุจดั่ง เป็นร่มโพธิ์ ให้ลูกน้อย<br>
+จะเฝ้าคอย ดูแล ไม่ไปไหน<br>
+ค่อยปกป้อง ลูกน้อย ไม่ห่างไกล<br>
+คอยใส่ใจ ให้เติบใหญ่ เป็นคนดี<br>
+<h1><mark>บทเพลงมอบให้พ่อ</mark></h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/60ItHLz5WEA?si=brue8UATMnZPDApF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </center>
 </div>
