--- a/daddy.html
+++ b/daddy.html
@@ -31,14 +31,14 @@ style="border:10px dotted blue;">
 <p>Dad ,I love u so much.I will be a doctor and be a good person.
 </p>
 <center>
-<img src="IMG_2359.jpg" width=250 height=200
+<img src="596115043784065215.jpg" width=250 height=200
 style="border:10px double purple;">
-<img src="IMG_2357.jpg" width=250 height=200
+<img src="596115042610184263.jpg" width=250 height=200
 style="border:10px dotted blue;">
 <br>
-<img src="IMG_2290.jpg" width=200 height=250
+<img src="596114949882512059.jpg" width=200 height=250
 style="border:10px double purple;">
-<img src="IMG_2360.jpg" width=200 height=250
+<img src="596114948473225388.jpg" width=200 height=250
 style="border:10px dotted blue;">
 <br><br>
 <h1><mark>บทกลอนมอบให้พ่อ</mark></h1>
