--- a/daddy.html
+++ b/daddy.html
@@ -24,7 +24,7 @@ p{text-indent:2em;}
 </video>
 <br><br>
 <h1><mark>สิ่งที่อยากจะบอกพ่อ</mark></h1>
-<img src="IMG_2358.jpg" width=200 height=250
+<img src="596114945670906288.jpg" width=200 height=250
 style="border:10px dotted blue;">
 </center>
 <br><br>
